--- a/public/Demographics.html
+++ b/public/Demographics.html
@@ -6,9 +6,9 @@
 
     <title>Demographics</title>
     <link rel="stylesheet" href="Demographics.css">
-    <div class="logo">
-        <img src="nemours-childrens-health-system-banner.jpg" alt="ordering_logo">
-        <img src="nemours-childrens-health-system.jpg" alt="ordering_logo">
+    <div >
+        <img class="logo1" src="nemours-childrens-health-system-banner.jpg" alt="ordering_logo">
+        <img class="logo2" src="nemours-childrens-health-system.jpg" alt="ordering_logo">
     </div>
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-database.js"></script>
@@ -32,7 +32,7 @@
 </script>
 
 </head>
-<div class="form">
+<div class="form" >
     <h1>Child Information</h1>
     <form id="Demographics" class="option" method="GET" >
         <body style="text-align: center">
@@ -67,6 +67,7 @@
                 <input type="button" name="story" id="choice1" value="Choose Story" onclick="chooseStory()">
                 <input type="button" name="story" id="choice2" value="Create Story" onclick="createNew()">
             </div>
+            <div></div>
     </form>
     <!--<script type="text/javascript" src= "/socket.io/socket.io.js"> </script><!-->
 
